--- a/tests/integration/targets/dns_config/tasks/main.yml
+++ b/tests/integration/targets/dns_config/tasks/main.yml
@@ -32,123 +32,93 @@
 
     - name: Overwrite all entries (search_domains, dns_servers)
       scale_computing.hypercore.dns_config:
-        overwrite: all
         search_domains:
-          - names:
-              - example.domain1.com
-              - example.domain2.com
-            prepend: False  # defaults to False
+          - example.domain1.com
+          - example.domain2.com
         dns_servers:
-          - ips:
-              - 1.2.3.4
-              - 5.6.7.8
-            prepend: False
+          - 1.2.3.4
+          - 5.6.7.8
+        state: set
       register: result
     - ansible.builtin.assert:
         that:
+          - result.changed
           - result.diff.before != result.diff.after
-          - result.new_state.0.search_domains == ["example.domain1.com", "example.domain2.com"]
-          - result.new_state.0.server_ips == ["1.2.3.4", "5.6.7.8"]
-          - result.new_state.0.uuid == actual_uuid
+          - result.new_state.search_domains == ["example.domain1.com", "example.domain2.com"]
+          - result.new_state.server_ips == ["1.2.3.4", "5.6.7.8"]
+          - result.new_state.uuid == actual_uuid
 
     - name: PREPEND new 'dns_servers' to existing DNS config
       scale_computing.hypercore.dns_config:
-        overwrite: none
         dns_servers:
-          - ips:
-              - 0.0.0.0
-              - 0.1.1.1
-            prepend: True
+          - 0.0.0.0
+          - 0.1.1.1
+        state: before
       register: result
     - ansible.builtin.assert:
         that:
+          - result.changed
           - result.diff.before != result.diff.after
-          - result.new_state.0.search_domains == ["example.domain1.com", "example.domain2.com"]
-          - result.new_state.0.server_ips == ["0.0.0.0", "0.1.1.1", "1.2.3.4", "5.6.7.8"]
-          - result.new_state.0.uuid == actual_uuid
+          - result.new_state.search_domains == ["example.domain1.com", "example.domain2.com"]
+          - result.new_state.server_ips == ["0.0.0.0", "0.1.1.1", "1.2.3.4", "5.6.7.8"]
+          - result.new_state.uuid == actual_uuid
 
     - name: PREPEND new 'search_domains' to existing DNS config
       scale_computing.hypercore.dns_config:
-        overwrite: none
         search_domains:
-          - names:
-              - example.domain0.com
-            prepend: True
+          - example.domain0.com
+        state: before
       register: result
     - ansible.builtin.assert:
         that:
+          - result.changed
           - result.diff.before != result.diff.after
-          - result.new_state.0.search_domains == ["example.domain0.com", "example.domain1.com", "example.domain2.com"]
-          - result.new_state.0.server_ips == ["0.0.0.0", "0.1.1.1", "1.2.3.4", "5.6.7.8"]
-          - result.new_state.0.uuid == actual_uuid
+          - result.new_state.search_domains == ["example.domain0.com", "example.domain1.com", "example.domain2.com"]
+          - result.new_state.server_ips == ["0.0.0.0", "0.1.1.1", "1.2.3.4", "5.6.7.8"]
+          - result.new_state.uuid == actual_uuid
 
     - name: APPEND new 'dns_servers' to existing DNS config
       scale_computing.hypercore.dns_config:
-        overwrite: none
         dns_servers:
-          - ips:
-              - 9.9.9.9
-              - 0.9.9.9
-            prepend: False
+          - 9.9.9.9
+          - 0.9.9.9
+        state: after
       register: result
     - ansible.builtin.assert:
         that:
+          - result.changed
           - result.diff.before != result.diff.after
-          - result.new_state.0.search_domains == ["example.domain0.com", "example.domain1.com", "example.domain2.com"]
-          - result.new_state.0.server_ips == ["0.0.0.0", "0.1.1.1", "1.2.3.4", "5.6.7.8", "9.9.9.9", "0.9.9.9"]
-          - result.new_state.0.uuid == actual_uuid
+          - result.new_state.search_domains == ["example.domain0.com", "example.domain1.com", "example.domain2.com"]
+          - result.new_state.server_ips == ["0.0.0.0", "0.1.1.1", "1.2.3.4", "5.6.7.8", "9.9.9.9", "0.9.9.9"]
+          - result.new_state.uuid == actual_uuid
 
     - name: APPEND new 'search_domains' to existing DNS config
       scale_computing.hypercore.dns_config:
-        overwrite: none
         search_domains:
-          - names:
-              - example.domain3.com
-            prepend: False
+          - example.domain3.com
+        state: after
       register: result
     - ansible.builtin.assert:
         that:
+          - result.changed
           - result.diff.before != result.diff.after
-          - result.new_state.0.search_domains == ["example.domain0.com", "example.domain1.com", "example.domain2.com", "example.domain3.com"]
-          - result.new_state.0.server_ips == ["0.0.0.0", "0.1.1.1", "1.2.3.4", "5.6.7.8", "9.9.9.9", "0.9.9.9"]
-          - result.new_state.0.uuid == actual_uuid
-
-    - name: PREPEND 'search_domains' and APPEND 'dns_servers' existing DNS config
-      scale_computing.hypercore.dns_config:
-        overwrite: none
-        search_domains:
-          - names:
-              - example.domain-2.com
-              - example.domain-1.com
-            prepend: True
-        dns_servers:
-          # Intentionally left out "prepend" option,
-          # because it should default to "False"
-          - ips:
-              - 8.8.8.1
-              - 8.8.8.2
-      register: result
-    - ansible.builtin.assert:
-        that:
-          - result.diff.before != result.diff.after
-          - result.new_state.0.search_domains == ["example.domain-2.com", "example.domain-1.com", "example.domain0.com", "example.domain1.com", "example.domain2.com", "example.domain3.com"]
-          - result.new_state.0.server_ips == ["0.0.0.0", "0.1.1.1", "1.2.3.4", "5.6.7.8", "9.9.9.9", "0.9.9.9", "8.8.8.1", "8.8.8.2"]
-          - result.new_state.0.uuid == actual_uuid
+          - result.new_state.search_domains == ["example.domain0.com", "example.domain1.com", "example.domain2.com", "example.domain3.com"]
+          - result.new_state.server_ips == ["0.0.0.0", "0.1.1.1", "1.2.3.4", "5.6.7.8", "9.9.9.9", "0.9.9.9"]
+          - result.new_state.uuid == actual_uuid
 
     - name: Clear all entries by using 'overwrite'
       scale_computing.hypercore.dns_config:
-        overwrite: all
-        search_domains:
-          - names: []
-        dns_servers:
-          - ips: []
+        search_domains: []
+        dns_servers: []
+        state: set
       register: result
     - ansible.builtin.assert:
         that:
+          - result.changed
           - result.diff.before != result.diff.after
-          - result.new_state.0.search_domains == []
-          - result.new_state.0.server_ips == []
-          - result.new_state.0.uuid == actual_uuid
+          - result.new_state.search_domains == []
+          - result.new_state.server_ips == []
+          - result.new_state.uuid == actual_uuid
 
 # -----------------------------------------------------------
 
