--- a/tests/integration/targets/dns_config_info/tasks/main.yml
+++ b/tests/integration/targets/dns_config_info/tasks/main.yml
@@ -26,8 +26,8 @@
     - ansible.builtin.assert:
         that:
           - result.records != []
-          - "{{ result.records[0].keys() | sort == ['latest_task_tag', 'search_domains', 'server_ips', 'uuid'] }}"
-          - result.records[0].uuid == actual_uuid
-          - result.records[0].server_ips == actual_server_ips
-          - result.records[0].search_domains == actual_search_domains # fails if set to [], [""] or ['']
-          - result.records[0].latest_task_tag
+          - "{{ result.records.keys() | sort == ['latest_task_tag', 'search_domains', 'server_ips', 'uuid'] }}"
+          - result.records.uuid == actual_uuid
+          - result.records.server_ips == actual_server_ips
+          - result.records.search_domains == actual_search_domains # fails if set to [], [""] or ['']
+          - result.records.latest_task_tag
