--- a/tests/integration/targets/vm_disk/tasks/main.yml
+++ b/tests/integration/targets/vm_disk/tasks/main.yml
@@ -3,7 +3,7 @@
     SC_HOST: "{{ sc_host }}"
     SC_USERNAME: "{{ sc_username }}"
     SC_PASSWORD: "{{ sc_password }}"
-    SC_TIMEOUT: "{{ sc_timeout|default(None) or 10 }}"
+    SC_TIMEOUT: "{{ sc_timeout }}"
 
   block:
     - name: Delete the VM with name vm-integration-test-disks, if it exists from before
