--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -98,6 +98,12 @@ jobs:
     runs-on: [self-hosted]
     container: python:3.10-slim-buster
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - run: pip3 install -r sanity.requirements -r test.requirements -r docs.requirements
+      - run: apt update
+      - run: apt install -y git make
+      - run: pip install ansible-core==2.13.1
       - run: mkdir -p $WORKDIR
       - run: cp -a ./  $WORKDIR
       - run: cd $WORKDIR && ansible-test integration
