--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -97,6 +97,10 @@ jobs:
       - integration-prepare-env
     runs-on: [self-hosted]
     container: python:3.10-slim-buster
+    env:
+      SC_HOST: ${{ secrets.SC_HOST }}
+      SC_USERNAME: ${{ secrets.SC_USERNAME }}
+      SC_PASSWORD: ${{ secrets.SC_PASSWORD }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
