--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -83,6 +83,8 @@ jobs:
           sc_password: ${SC_PASSWORD}
           EOF
       - run: cd $WORKDIR && ls -al tests/integration/integration_config.yml
+      - run: cd $WORKDIR && ansible-playbook tests/integration/prepare/prepare_vm.yml
+      - run: cd $WORKDIR && ansible-playbook tests/integration/prepare/prepare_iso.yml
 
   integration-test:
     needs:
