--- a/tests/integration/prepare/prepare_vm.yml
+++ b/tests/integration/prepare/prepare_vm.yml
@@ -1,6 +1,7 @@
 ---
 - name: Create VM for integration tests
   hosts: localhost
+  connection: local
   tasks:
   - name: Create VM
     scale_computing.hypercore.vm:
@@ -26,24 +27,3 @@
         - type: nic
           nic_vlan: 1
       machine_type: BIOS
-    register: vm_created
-  - ansible.builtin.assert:
-      that:
-        - vm_created.record.0.description == "Demo VM"
-        - vm_created.record.0.memory == 536870912
-        - vm_created.record.0.tags == ["Xlab"]
-        - vm_created.record.0.vcpu == 2
-        - vm_created.record.0.vm_name == "vm-integration-test-source-vm"
-        - vm_created.record.0.disks | length == 1
-        - vm_created.record.0.nics | length == 1
-        - vm_created.record.0.nics.0.vlan == 1
-        - vm_created.record.0.nics.0.type == "RTL8139"
-        - vm_created.record.0.disks.0.type == "virtio_disk"
-        - vm_created.record.0.disks.0.disk_slot == 0
-        - vm_created.record.0.boot_devices | length == 2
-        - vm_created.record.0.boot_devices.0.type == "virtio_disk"
-        - vm_created.record.0.boot_devices.1.type == "RTL8139"
-        - vm_created.record.0.boot_devices.0.disk_slot == 0
-        - vm_created.record.0.boot_devices.1.vlan == 1
-        - vm_created.record.0.power_state == "stopped"
-        - vm_created.record.0.machine_type == "BIOS"
