--- a/tests/integration/targets/vm_boot_devices/tasks/main.yml
+++ b/tests/integration/targets/vm_boot_devices/tasks/main.yml
@@ -27,11 +27,11 @@
         machine_type: BIOS
       register: result
 
-    - name: Create project directory /tmp (if it doesn't exist already)
-      file: state=directory path=/tmp
+    - name: Create a text file
+      command: touch integration.txt
 
-    - name: Download ISO image from http://tinycorelinux.net/13.x/x86/release/TinyCore-current.iso and save it into /tmp/TinyCore-vm-boot-devices-integration.iso
-      get_url: url=http://tinycorelinux.net/13.x/x86/release/TinyCore-current.iso dest=/tmp/TinyCore-vm-boot-devices-integration.iso
+    - name: Create an ISO file
+      command: genisoimage -output integration.iso integration.txt
 
     - name: Delete the ISO image (if it may exist from before)
       scale_computing.hypercore.iso:
@@ -42,7 +42,7 @@
     - name: Upload ISO image TinyCore-vm-boot-devices-integration.iso to HyperCore API
       scale_computing.hypercore.iso:
         name: "TinyCore-vm-boot-devices-integration.iso"
-        source: "/tmp/TinyCore-vm-boot-devices-integration.iso"
+        source: "integration.iso"
         state: present
       register: result
 
@@ -184,9 +184,9 @@
         state: absent
       register: result
 
-    - name: Delete locally installed ISO image from /tmp/TinyCore-vm-boot-devices-integration.iso
+    - name: Delete locally installed ISO image from current dir
       ansible.builtin.file:
-        path: /tmp/TinyCore-vm-boot-devices-integration.iso
+        path: integration.iso
         state: absent
       register: file_deleted
     - ansible.builtin.assert:
