--- a/tests/integration/targets/vm_disk/tasks/main.yml
+++ b/tests/integration/targets/vm_disk/tasks/main.yml
@@ -132,11 +132,11 @@
           - result is changed
           - result.record | length == 0
 
-    - name: Create project directory /tmp (if it doesn't exist already)
-      file: state=directory path=/tmp
+    - name: Create a text file
+      command: touch integration.txt
 
-    - name: Download ISO image from http://tinycorelinux.net/13.x/x86/release/TinyCore-current.iso and save it into /tmp/TinyCore-vm-disk-integration.iso
-      get_url: url=http://tinycorelinux.net/13.x/x86/release/TinyCore-current.iso dest=/tmp/TinyCore-vm-disk-integration.iso
+    - name: Create an ISO file
+      command: genisoimage -output integration.iso integration.txt
 
     - name: Delete the ISO image (if it may exist from before)
       scale_computing.hypercore.iso: &delete-iso
@@ -147,7 +147,7 @@
     - name: Upload ISO image TinyCore-vm-disk-integration.iso to HyperCore API
       scale_computing.hypercore.iso:
         name: "TinyCore-vm-disk-integration.iso"
-        source: "/tmp/TinyCore-vm-disk-integration.iso"
+        source: "integration.iso"
         state: present
       register: result
 
@@ -260,9 +260,9 @@
       scale_computing.hypercore.iso: *delete-iso
       register: result
 
-    - name: Delete locally installed ISO image from /tmp/TinyCore-vm-disk-integration.iso
+    - name: Delete locally installed ISO image from current dir
       ansible.builtin.file:
-        path: /tmp/TinyCore-vm-disk-integration.iso
+        path: integration.iso
         state: absent
       register: file_deleted
     - ansible.builtin.assert:
