--- a/tests/integration/targets/vm/tasks/01_main.yml
+++ b/tests/integration/targets/vm/tasks/01_main.yml
@@ -12,24 +12,26 @@
         state: absent
       register: result
 
+    - name: Get integration-test.iso info
+      scale_computing.hypercore.iso_info:
+        name: "integration-test.iso"
+      register: uploaded_iso_info
+
     - name: Create a text file
       command: touch integration.txt
+      when: uploaded_iso_info.records | length == 0
 
     - name: Create an ISO file
       command: genisoimage -output integration.iso integration.txt
-
-    - name: Delete the ISO image (if it may exist)
-      scale_computing.hypercore.iso: &delete-iso
-        name: "TinyCore-vm-integration.iso"
-        state: absent
-      register: result
+      when: uploaded_iso_info.records | length == 0
 
 # ----------------------------------Job-------------------------------------------------------------------------------------
-    - name: Upload ISO image TinyCore-vm-integration.iso to HyperCore API
+    - name: Upload ISO image integration-test.iso to HyperCore API
       scale_computing.hypercore.iso:
-        name: "TinyCore-vm-integration.iso"
+        name: "integration-test.iso"
         source: "integration.iso"
         state: present
+      when: uploaded_iso_info.records | length == 0
       register: result
 
     - name: Create and start the VM with disks, nics and boot devices set. Attach ISO onto the VM.
@@ -51,7 +53,7 @@
             size: "{{ '10.1 GB' | human_to_bytes }}"
           - type: ide_cdrom
             disk_slot: 0
-            iso_name: TinyCore-vm-integration.iso
+            iso_name: integration-test.iso
         nics:
           - vlan: 1
             type: RTL8139
@@ -136,7 +138,7 @@
         disks:
           - type: ide_cdrom
             disk_slot: 0
-            iso_name: TinyCore-vm-integration.iso
+            iso_name: integration-test.iso
           - type: virtio_disk
             disk_slot: 1
             size: "{{ '20 GB' | human_to_bytes }}"
@@ -160,7 +162,7 @@
           - result.records[0].disks.0.type == "virtio_disk"
           - result.records[0].disks.0.disk_slot == 0
           - result.records[0].disks.1.type == "ide_cdrom"
-          - result.records[0].disks.1.iso_name == "TinyCore-vm-integration.iso"
+          - result.records[0].disks.1.iso_name == "integration-test.iso"
           - result.records[0].disks.2.type == "virtio_disk"
           - result.records[0].disks.2.disk_slot == 1
           - result.records[0].vcpu == 2
@@ -183,7 +185,7 @@
           - result.records[0].disks.0.type == "virtio_disk"
           - result.records[0].disks.0.disk_slot == 0
           - result.records[0].disks.1.type == "ide_cdrom"
-          - result.records[0].disks.1.iso_name == "TinyCore-vm-integration.iso"
+          - result.records[0].disks.1.iso_name == "integration-test.iso"
           - result.records[0].disks.2.type == "virtio_disk"
           - result.records[0].disks.2.disk_slot == 1
           - result.records[0].vcpu == 2
@@ -200,7 +202,7 @@
         disks:
           - type: ide_cdrom
             disk_slot: 0
-            iso_name: TinyCore-vm-integration.iso
+            iso_name: integration-test.iso
           - type: virtio_disk
             disk_slot: 1
             size: "{{ '20 GB' | human_to_bytes }}"
@@ -228,7 +230,7 @@
           - result.records[0].disks.0.type == "virtio_disk"
           - result.records[0].disks.0.disk_slot == 0
           - result.records[0].disks.1.type == "ide_cdrom"
-          - result.records[0].disks.1.iso_name == "TinyCore-vm-integration.iso"
+          - result.records[0].disks.1.iso_name == "integration-test.iso"
           - result.records[0].disks.2.type == "virtio_disk"
           - result.records[0].disks.2.disk_slot == 1
           - result.records[0].nics | length == 2
@@ -256,7 +258,7 @@
           - result.records[0].disks.0.type == "virtio_disk"
           - result.records[0].disks.0.disk_slot == 0
           - result.records[0].disks.1.type == "ide_cdrom"
-          - result.records[0].disks.1.iso_name == "TinyCore-vm-integration.iso"
+          - result.records[0].disks.1.iso_name == "integration-test.iso"
           - result.records[0].disks.2.type == "virtio_disk"
           - result.records[0].disks.2.disk_slot == 1
           - result.records[0].nics | length == 2
@@ -270,10 +272,6 @@
 # ----------------------------------Cleanup--------------------------------------------------------------------------------
     - name: Delete the VM with name vm-integration-test-vm
       scale_computing.hypercore.vm: *delete-vm
-      register: result
-
-    - name: Delete the ISO image
-      scale_computing.hypercore.iso: *delete-iso
       register: result
 
     - name: Delete locally installed ISO image from current dir
