--- a/tests/integration/targets/vm_disk/tasks/main.yml
+++ b/tests/integration/targets/vm_disk/tasks/main.yml
@@ -132,32 +132,34 @@
           - result is changed
           - result.record | length == 0
 
+    - name: Get integration-test.iso info
+      scale_computing.hypercore.iso_info:
+        name: "integration-test.iso"
+      register: uploaded_iso_info
+
     - name: Create a text file
       command: touch integration.txt
+      when: uploaded_iso_info.records | length == 0
 
     - name: Create an ISO file
       command: genisoimage -output integration.iso integration.txt
+      when: uploaded_iso_info.records | length == 0
 
-    - name: Delete the ISO image (if it may exist from before)
-      scale_computing.hypercore.iso: &delete-iso
-        name: "TinyCore-vm-disk-integration.iso"
-        state: absent
-      register: result
-
-    - name: Upload ISO image TinyCore-vm-disk-integration.iso to HyperCore API
+    - name: Upload ISO image integration-test.iso to HyperCore API
       scale_computing.hypercore.iso:
-        name: "TinyCore-vm-disk-integration.iso"
+        name: "integration-test.iso"
         source: "integration.iso"
         state: present
+      when: uploaded_iso_info.records | length == 0
       register: result
 
-    - name: Attach TinyCore-current.iso ISO onto the current CD-ROM device
+    - name: Attach integration.iso ISO onto the current CD-ROM device
       scale_computing.hypercore.vm_disk: &create-cdrom-disk
         vm_name: vm-integration-test-disks
         items:
           - disk_slot: 0
             type: ide_cdrom
-            iso_name: "TinyCore-vm-disk-integration.iso"
+            iso_name: "integration-test.iso"
         state: present
       register: result
     - ansible.builtin.assert:
@@ -166,11 +168,11 @@
           - result is changed
           - result.record.0.type == "ide_cdrom"
           - result.record.0.disk_slot == 0
-          - result.record.0.iso_name == "TinyCore-vm-disk-integration.iso"
+          - result.record.0.iso_name == "integration-test.iso"
 
     - name: Assert that ISO image is mounted on vm-integration-test-disks
       scale_computing.hypercore.iso_info:
-        name: TinyCore-vm-disk-integration.iso
+        name: integration-test.iso
       register: result
     - ansible.builtin.assert:
         that:
@@ -194,7 +196,7 @@
 
     - name: Assert that ISO image isn't mounted on vm-integration-test-disks anymore
       scale_computing.hypercore.iso_info:
-        name: TinyCore-vm-disk-integration.iso
+        name: integration-test.iso
       register: result
     - ansible.builtin.assert:
         that:
@@ -255,10 +257,6 @@
           - result is succeeded
           - result is changed
           - result.record == []
-
-    - name: Delete the ISO image from the API
-      scale_computing.hypercore.iso: *delete-iso
-      register: result
 
     - name: Delete locally installed ISO image from current dir
       ansible.builtin.file:
