--- a/tests/integration/prepare/prepare_vm.yml
+++ b/tests/integration/prepare/prepare_vm.yml
@@ -3,6 +3,30 @@
   hosts: localhost
   connection: local
   tasks:
+  - name: Check if Source VM exists
+    scale_computing.hypercore.vm_info:
+      vm_name: vm-integration-test-source-vm
+    register: vm_created_info
+  - ansible.builtin.assert:
+      that:
+        - vm_created_info.records.0.description == "Source VM"
+        - vm_created_info.records.0.memory == 536870912
+        - vm_created_info.records.0.tags == ["Xlab"]
+        - vm_created_info.records.0.vcpu == 2
+        - vm_created_info.records.0.vm_name == "vm-integration-test-source-vm"
+        - vm_created_info.records.0.disks | length == 1
+        - vm_created_info.records.0.nics | length == 1
+        - vm_created_info.records.0.nics.0.vlan == 1
+        - vm_created_info.records.0.nics.0.type == "RTL8139"
+        - vm_created_info.records.0.disks.0.type == "virtio_disk"
+        - vm_created_info.records.0.disks.0.disk_slot == 0
+        - vm_created_info.records.0.boot_devices | length == 2
+        - vm_created_info.records.0.boot_devices.0.type == "virtio_disk"
+        - vm_created_info.records.0.boot_devices.1.type == "RTL8139"
+        - vm_created_info.records.0.boot_devices.0.disk_slot == 0
+        - vm_created_info.records.0.boot_devices.1.vlan == 1
+        - vm_created_info.records.0.power_state == "stopped"
+
   - name: Create VM
     scale_computing.hypercore.vm:
       vm_name: vm-integration-test-source-vm
@@ -27,48 +51,28 @@
         - type: nic
           nic_vlan: 1
       machine_type: BIOS
-    register: vm_created
-  - ansible.builtin.assert:
-      that:
-        - vm_created.record.0.description == "Source VM"
-        - vm_created.record.0.memory == 536870912
-        - vm_created.record.0.tags == ["Xlab"]
-        - vm_created.record.0.vcpu == 2
-        - vm_created.record.0.vm_name == "vm-integration-test-source-vm"
-        - vm_created.record.0.disks | length == 1
-        - vm_created.record.0.nics | length == 1
-        - vm_created.record.0.nics.0.vlan == 1
-        - vm_created.record.0.nics.0.type == "RTL8139"
-        - vm_created.record.0.disks.0.type == "virtio_disk"
-        - vm_created.record.0.disks.0.disk_slot == 0
-        - vm_created.record.0.boot_devices | length == 2
-        - vm_created.record.0.boot_devices.0.type == "virtio_disk"
-        - vm_created.record.0.boot_devices.1.type == "RTL8139"
-        - vm_created.record.0.boot_devices.0.disk_slot == 0
-        - vm_created.record.0.boot_devices.1.vlan == 1
-        - vm_created.record.0.power_state == "stopped"
-        - vm_created.record.0.machine_type == "BIOS"
+    when: vm_created_info.records | length == 0
 
   - name: Check that Source VM was created
     scale_computing.hypercore.vm_info:
       vm_name: vm-integration-test-source-vm
-    register: vm_created
+    register: vm_created_info
   - ansible.builtin.assert:
       that:
-        - vm_created.records.0.description == "Source VM"
-        - vm_created.records.0.memory == 536870912
-        - vm_created.records.0.tags == ["Xlab"]
-        - vm_created.records.0.vcpu == 2
-        - vm_created.records.0.vm_name == "vm-integration-test-source-vm"
-        - vm_created.records.0.disks | length == 1
-        - vm_created.records.0.nics | length == 1
-        - vm_created.records.0.nics.0.vlan == 1
-        - vm_created.records.0.nics.0.type == "RTL8139"
-        - vm_created.records.0.disks.0.type == "virtio_disk"
-        - vm_created.records.0.disks.0.disk_slot == 0
-        - vm_created.records.0.boot_devices | length == 2
-        - vm_created.records.0.boot_devices.0.type == "virtio_disk"
-        - vm_created.records.0.boot_devices.1.type == "RTL8139"
-        - vm_created.records.0.boot_devices.0.disk_slot == 0
-        - vm_created.records.0.boot_devices.1.vlan == 1
-        - vm_created.records.0.power_state == "stopped"
+        - vm_created_info.records.0.description == "Source VM"
+        - vm_created_info.records.0.memory == 536870912
+        - vm_created_info.records.0.tags == ["Xlab"]
+        - vm_created_info.records.0.vcpu == 2
+        - vm_created_info.records.0.vm_name == "vm-integration-test-source-vm"
+        - vm_created_info.records.0.disks | length == 1
+        - vm_created_info.records.0.nics | length == 1
+        - vm_created_info.records.0.nics.0.vlan == 1
+        - vm_created_info.records.0.nics.0.type == "RTL8139"
+        - vm_created_info.records.0.disks.0.type == "virtio_disk"
+        - vm_created_info.records.0.disks.0.disk_slot == 0
+        - vm_created_info.records.0.boot_devices | length == 2
+        - vm_created_info.records.0.boot_devices.0.type == "virtio_disk"
+        - vm_created_info.records.0.boot_devices.1.type == "RTL8139"
+        - vm_created_info.records.0.boot_devices.0.disk_slot == 0
+        - vm_created_info.records.0.boot_devices.1.vlan == 1
+        - vm_created_info.records.0.power_state == "stopped"
